# sock

./: .gitattributes  .gitignore  .gitmodules  .ignore  Cargo.toml  Readme.md  Remember.md  build.rs
src/: board.rs  generated_lut.rs  lib.rs  main.rs  solver.rs  subset_cache.rs  visualize.rs
tests/: solver.rs
