[package]
name = "sock"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sock"
path = "src/main.rs"

[profile.release]
debug = true
codegen-units = 1
lto = "fat"

[features]
default = ["visualize", "dhat-heap"] 
no-jobs = []
tracing = []
visualize = ["tracing"]
dhat-heap = []
dhat-ad-hoc = []
paranoid = []

[dependencies]
cli-table = "0.4.7"
dhat = "0.3.2"
rayon = "1.7.0"
rustc-hash = "1.1.0"
strum = { version = "0.25.0", features = ["derive"]}
unroll = { version = "0.1.5", features = ["unstable"] }

[build-dependencies]
anyhow = "1.0"
